# ERPGuard-AI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: seed_data.json
src/ai/: model.py
src/data/: extractors.py  loader.py
src/obs/: logger.py
src/router/: graph.py  intent_router.py  nodes.py  nodes_common.py
src/schemas/: __init__.py  model.py
src/security/: policy.py
src/session/: store.py
src/tools/: __init__.py  compliance.py  hot_picks.py  inventory.py  kb.py  vendor.py
